Fix highlighted background, message-inside spacing, animation speed

--- a/assets/css/frame.css
+++ b/assets/css/frame.css
@@ -13,7 +13,7 @@
 	vertical-align: middle;
 	margin: auto 100px;
 	padding: 30px;
-	border: 10px solid #efefef;
+	border: 10px solid black;
 	background-color: #eaeaea;
 	position: relative;
 	transition: .3s ease;
@@ -36,7 +36,7 @@
     height:100%;
     display:flex;
     flex-direction:column;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: center;
 }
 
